# granada

./: .stylish-haskell.yaml  .travis.yml  Granada.cabal  LICENSE  README.md  action  character  goal  granada.cabal  program  syntax
app/: Main.hs
bench/: Main.hs  Parser.hs
bench/Granada/Benchmarks/: Parser.hs
examples/: action  character  program.grd
executable/: Main.hs
src/: Expr.hs  GameAI.hs  Lib.hs  Parser.hs
src/Granada/: Ast.hs  Expr.hs  GameAI.hs  Parser.hs
test/: Spec.hs
tests/: Main.hs
tests/Granada/Tests/: Parser.hs
