name:                Granada
version:             0.1.0.0
synopsis:            A DSL for game AI agents
description:         Please see README.md
homepage:            https://github.com/adolfosilva/granada#readme
license:             GPL-3
license-file:        LICENSE
author:              Adolfo Silva
maintainer:          a9126@alunos.ipca.pt
copyright:           2017 Adolfo Silva
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  ghc-options:         -Wall
  hs-source-dirs:      library
  exposed-modules:     Granada.Parser
                  -- , Granada.Parser2
                     , Granada.GameAI
                     , Granada.Expr
                     , Granada.Ast
                     , Granada
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , text
                     , parsec
  default-language:    Haskell2010
  default-extensions:  FlexibleContexts
                     , MultiParamTypeClasses

executable granada-exe
  hs-source-dirs:      executable
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Granada 
  default-language:    Haskell2010

test-suite granada-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Main.hs
  build-depends:       base
                     , Granada
                     , tasty
                     , tasty-quickcheck
                     , tasty-hunit
                     , tasty-golden
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark granada-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Main.hs
  build-depends:       base
                     , Granada
                     , criterion
                     , parsec
  ghc-options:         -Wall -O2
  default-language:    Haskell2010
  default-extensions:  FlexibleContexts

source-repository head
  type:     git
  location: https://github.com/adolfosilva/granada
