name:                granada
version:             0.1.0.0
synopsis:            A DSL for game AI agents
description:         Please see README.md
homepage:            https://github.com/adolfosilva/granada#readme
license:             MIT
license-file:        LICENSE
author:              Adolfo Silva
maintainer:          a9126@alunos.ipca.pt
copyright:           2017 Adolfo Silva
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Lib, Parser, GameAI, Expr
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , parsec
  default-language:    Haskell2010
  default-extensions:  FlexibleContexts

executable granada-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , granada 
  default-language:    Haskell2010

test-suite granada-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , granada
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adolfosilva/granada
